--- a/index.html
+++ b/index.html
@@ -217,8 +217,10 @@
             </div>
         </section>
 
-<br><br><br><br><br>
-<hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
+
+<!-- new-card section start -->
+
+
         <section>
             <div class="conteinar">
                 <div class="main-two-card">
@@ -232,6 +234,5 @@
                 </div>
             </div>
         </section>
-<br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
